[cygnus-twitter][doc]Fixed misspelled "_" in doc examples.

--- a/docker/cygnus-twitter/agent.conf
+++ b/docker/cygnus-twitter/agent.conf
@@ -48,14 +48,14 @@ cygnus-twitter.sinks.hdfs-sink.hdfs_host = storage.cosmos.lab.fiware.org
 # port of the HDFS service listening for persistence operations; 14000 for httpfs, 50070 for webhdfs
 cygnus-twitter.sinks.hdfs-sink.hdfs_port = 14000
 # username allowed to write in HDFS
-cygnus-twitter.sinks.hdfs-sink.hdfs_username = jpalanca
+cygnus-twitter.sinks.hdfs-sink.hdfs_username =
 # password for the above username; this is only required for Hive authentication
 #cygnus-twitter.sinks.hdfs-sink.hdfs_password = xxxxxxxx
 # OAuth2 token for HDFS authentication
 cygnus-twitter.sinks.hdfs-sink.oauth2_token =
 
-cygnus-twitter.sinks.hdfs-sink.hdfs_folder = vlc
-cygnus-twitter.sinks.hdfs-sink.hdfs_file = tweets.txt
+cygnus-twitter.sinks.hdfs-sink.hdfs_folder =
+cygnus-twitter.sinks.hdfs-sink.hdfs_file =
 
 
 
