--- a/cygnus-ngsi/conf/agent_ngsi.conf.template
+++ b/cygnus-ngsi/conf/agent_ngsi.conf.template
@@ -69,7 +69,11 @@ cygnusagent.sinks.hdfs-sink.type = com.telefonica.iot.cygnus.sinks.NGSIHDFSSink
 # default data model, must be dm-by-entity
 # cygnusagent.sinks.hdfs-sink.data_model = dm-by-entity
 # rest if the interaction with HDFS will be WebHDFS/HttpFS-based, binary if based on the Hadoop API
-# cygnusagent.sinks.hdfs-sink.backend_impl = rest
+# cygnusagent.sinks.hdfs-sink.backend.impl = rest
+# maximum number of Http connections to HDFS backend
+# cygnusagent.sinks.hdfs-sink.backend.max_conns = 500
+# maximum number of Http connections per route to HDFS backend
+# cygnusagent.sinks.hdfs-sink.backend.max_conns_per_route = 100
 # Comma-separated list of FQDN/IP address regarding the HDFS Namenode endpoints
 # If you are using Kerberos authentication, then the usage of FQDNs instead of IP addresses is mandatory
 # cygnusagent.sinks.hdfs-sink.hdfs_host = localhost
@@ -144,6 +148,10 @@ cygnusagent.sinks.ckan-sink.api_key = ckanapikey
 # cygnusagent.sinks.ckan-sink.batch_timeout = 30
 # number of retries upon persistence error
 # cygnusagent.sinks.ckan-sink.batch_ttl = 10
+# maximum number of Http connections to CKAN backend
+# cygnusagent.sinks.ckan-sink.backend.max_conns = 500
+# maximum number of Http connections per route to CKAN backend
+# cygnusagent.sinks.ckan-sink.backend.max_conns_per_route = 100
 
 # ============================================
 # NGSIMySQLSink configuration
