--- a/cygnus-twitter/conf/agent_twitter.conf.template
+++ b/cygnus-twitter/conf/agent_twitter.conf.template
@@ -57,7 +57,11 @@ cygnusagent.sinks.hdfs-sink.type = com.telefonica.iot.cygnus.sinks.TwitterHDFSSi
 # true if lower case is wanted to forced in all the element names, false otherwise
 # cygnusagent.sinks.hdfs-sink.enable_lowercase = false
 # rest if the interaction with HDFS will be WebHDFS/HttpFS-based, binary if based on the Hadoop API
-# cygnusagent.sinks.hdfs-sink.backend_impl = rest
+# cygnusagent.sinks.hdfs-sink.backend.impl = rest
+# maximum number of Http connections to HDFS backend
+# cygnusagent.sinks.hdfs-sink.backend.max_conns = 500
+# maximum number of Http connections per route to HDFS backend
+# cygnusagent.sinks.hdfs-sink.backend.max_conns_per_route = 100
 # Comma-separated list of FQDN/IP address regarding the HDFS Namenode endpoints
 # If you are using Kerberos authentication, then the usage of FQDNs instead of IP addresses is mandatory
 # cygnusagent.sinks.hdfs-sink.hdfs_host = localhost
