--- a/cygnus-ngsi/conf/agent_ngsi.conf.template
+++ b/cygnus-ngsi/conf/agent_ngsi.conf.template
@@ -15,25 +15,25 @@
 # For those usages not covered by the GNU Affero General Public License please contact with iot_support at tid dot es
 
 #=============================================
-# To be put in APACHE_FLUME_HOME/conf/cygnus.conf
+# To be put in APACHE_FLUME_HOME/conf/agent.conf
 #
 # General configuration template explaining how to setup a sink of each of the available types (HDFS, CKAN, MySQL, PostgreSQL, Mongo, FIWARE Comet, Kafka, DynamoDB, CartoDB).
 
 #=============================================
-# the next tree fields set the sources, sinks and channels used by Cygnus. You could use different names than the
+# The next tree fields set the sources, sinks and channels used by Cygnus. You could use different names than the
 # ones suggested below, but in that case make sure you keep coherence in properties names along the configuration file.
-# regarding sinks, you can use multiple types at the same time; the only requirement is to provide a channel for each
+# Regarding sinks, you can use multiple types at the same time; the only requirement is to provide a channel for each
 # one of them (this example shows how to configure 3 sink types at the same time). Even, you can define more than one
 # sink of the same type and sharing the channel in order to improve the performance (this is like having
 # multi-threading).
 cygnus-ngsi.sources = http-source
-cygnus-ngsi.sinks = hdfs-sink mysql-sink ckan-sink mongo-sink sth-sink kafka-sink dynamo-sink postgresql-sink cartodb-sink
-cygnus-ngsi.channels = hdfs-channel mysql-channel ckan-channel mongo-channel sth-channel kafka-channel dynamo-channel postgresql-channel cartodb-channel
+cygnus-ngsi.sinks = hdfs-sink mysql-sink ckan-sink mongo-sink sth-sink kafka-sink dynamodb-sink postgresql-sink cartodb-sink
+cygnus-ngsi.channels = hdfs-channel mysql-channel ckan-channel mongo-channel sth-channel kafka-channel dynamodb-channel postgresql-channel cartodb-channel
 
 #=============================================
 # source configuration
 # channel name where to write the notification events
-cygnus-ngsi.sources.http-source.channels = hdfs-channel mysql-channel ckan-channel mongo-channel sth-channel kafka-channel dynamo-channel postgresql-channel
+cygnus-ngsi.sources.http-source.channels = hdfs-channel mysql-channel ckan-channel mongo-channel sth-channel kafka-channel dynamodb-channel postgresql-channel
 # source class, must not be changed
 cygnus-ngsi.sources.http-source.type = org.apache.flume.source.http.HTTPSource
 # listening port the Flume source will use for receiving incoming notifications
@@ -52,7 +52,7 @@ cygnus-ngsi.sources.http-source.interceptors = ts gi
 cygnus-ngsi.sources.http-source.interceptors.ts.type = timestamp
 # GroupingInterceptor, do not change
 cygnus-ngsi.sources.http-source.interceptors.gi.type = com.telefonica.iot.cygnus.interceptors.NGSIGroupingInterceptor$Builder
-# Grouping rules for the GroupingIntercetor, put the right absolute path to the file if necessary
+# Grouping rules for the GroupingInterceptor, put the right absolute path to the file if necessary
 # see the doc/design/interceptors document for more details
 cygnus-ngsi.sources.http-source.interceptors.gi.grouping_rules_conf_file = /usr/cygnus/conf/grouping_rules.conf
 
@@ -88,7 +88,7 @@ cygnus-ngsi.sinks.hdfs-sink.oauth2_token = xxxxxxxx
 # true if the notified fiware-service (or the default one, if no one is notified) is used as the HDFS namespace, false otherwise
 # cygnus-ngsi.sinks.hdfs-sink.service_as_namespace = false
 # how the attributes are stored, available formats are json-row, json-column, csv-row and csv-column
-# cygnus-ngsi.sinks.hdfs-sink.file_format = json-column
+# cygnus-ngsi.sinks.hdfs-sink.file_format = json-row
 # character used for separating the values when using CSV file formats
 # cygnus-ngsi.sinks.hdfs-sink.csv_separator = ,
 # number of notifications to be included within a processing batch
@@ -205,7 +205,7 @@ cygnus-ngsi.sinks.mysql-sink.type = com.telefonica.iot.cygnus.sinks.NGSIMySQLSin
 # password for the user above
 # cygnus-ngsi.sinks.mysql-sink.mysql_password = xxxxxxxxxxxx
 # how the attributes are stored, either per row either per column (row, column)
-# cygnus-ngsi.sinks.mysql-sink.attr_persistence = column
+# cygnus-ngsi.sinks.mysql-sink.attr_persistence = row
 # select the data_model: dm-by-service-path or dm-by-entity
 # cygnus-ngsi.sinks.mysql-sink.data_model = dm-by-entity
 # number of notifications to be included within a processing batch
@@ -222,11 +222,11 @@ cygnus-ngsi.sinks.mongo-sink.type = com.telefonica.iot.cygnus.sinks.NGSIMongoSin
 # channel name from where to read notification events
 cygnus-ngsi.sinks.mongo-sink.channel = mongo-channel
 # true applies the new encoding, false applies the old encoding
-# cygnus-ngsi.sinks.hdfs-sink.enable_encoding = false
+# cygnus-ngsi.sinks.mongo-sink.enable_encoding = false
 # true if the grouping feature is enabled for this sink, false otherwise
 # cygnus-ngsi.sinks.mongo-sink.enable_grouping = false
 # true if lower case is wanted to forced in all the element names, false otherwise
-# cygnus-ngsi.sinks.hdfs-sink.enable_lowercase = false
+# cygnus-ngsi.sinks.mongo-sink.enable_lowercase = false
 # FQDN/IP:port where the MongoDB server runs (standalone case) or comma-separated list of FQDN/IP:port pairs where the MongoDB replica set members run
 # cygnus-ngsi.sinks.mongo-sink.mongo_hosts = x1.y1.z1.w1:port1,x2.y2.z2.w2:port2,...
 # a valid user in the MongoDB server (or empty if authentication is not enabled in MongoDB)
@@ -240,7 +240,7 @@ cygnus-ngsi.sinks.mongo-sink.channel = mongo-channel
 # select the data_model: dm-by-service-path, dm-by-entity or dm-by-attribute
 # cygnus-ngsi.sinks.mongo-sink.data_model = dm-by-entity
 # how the attributes are stored, either per row either per column (row, column)
-# cygnus-ngsi.sinks.mongo-sink.attr_persistence = column
+# cygnus-ngsi.sinks.mongo-sink.attr_persistence = row
 # number of notifications to be included within a processing batch
 # cygnus-ngsi.sinks.mongo-sink.batch_size = 100
 # timeout for batch accumulation
@@ -302,9 +302,9 @@ cygnus-ngsi.sinks.kafka-sink.type = com.telefonica.iot.cygnus.sinks.NGSIKafkaSin
 # channel name from where to read notification events
 cygnus-ngsi.sinks.kafka-sink.channel = kafka-channel
 # true if the grouping feature is enabled for this sink, false otherwise
-# cygnus-ngsi.sinks.sth-sink.enable_grouping = false
+# cygnus-ngsi.sinks.kafka-sink.enable_grouping = false
 # true if lower case is wanted to forced in all the element names, false otherwise
-# cygnus-ngsi.sinks.hdfs-sink.enable_lowercase = false
+# cygnus-ngsi.sinks.kafka-sink.enable_lowercase = false
 # select the data_model: dm-by-service, dm-by-service-path, dm-by-entity or dm-by-attribute
 # cygnus-ngsi.sinks.kafka-sink.data_model = dm-by-entity
 # comma-separated list of Kafka brokers (a broker is defined as host:port)
@@ -325,29 +325,29 @@ cygnus-ngsi.sinks.kafka-sink.channel = kafka-channel
 # ============================================
 # NGSIDynamoDBSink configuration
 # sink class, must not be changed
-cygnus-ngsi.sinks.dynamo-sink.type = com.telefonica.iot.cygnus.sinks.NGSIDynamoDBSink
+cygnus-ngsi.sinks.dynamodb-sink.type = com.telefonica.iot.cygnus.sinks.NGSIDynamoDBSink
 # channel name from where to read notification events
-cygnus-ngsi.sinks.dynamo-sink.channel = dynamo-channel
+cygnus-ngsi.sinks.dynamodb-sink.channel = dynamodb-channel
 # AWS Access Key Id
-cygnus-ngsi.sinks.dynamo-sink.access_key_id = xxxxxxxx
+cygnus-ngsi.sinks.dynamodb-sink.access_key_id = xxxxxxxx
 # AWS Secret Access Key
-cygnus-ngsi.sinks.dynamo-sink.secret_access_key = xxxxxxxxx
+cygnus-ngsi.sinks.dynamodb-sink.secret_access_key = xxxxxxxxx
 # AWS region where the tables will be created (link)
-# cygnus-ngsi.sinks.dynamo-sink.region = eu-central-1
+# cygnus-ngsi.sinks.dynamodb-sink.region = eu-central-1
 # true if the grouping feature is enabled for this sink, false otherwise
-# cygnus-ngsi.sinks.dynamo-sink.enable_grouping = false
+# cygnus-ngsi.sinks.dynamodb-sink.enable_grouping = false
 # true if lower case is wanted to forced in all the element names, false otherwise
 # cygnus-ngsi.sinks.hdfs-sink.enable_lowercase = false
 # how the attributes are stored, either per row either per column (row, column)
-# cygnus-ngsi.sinks.dynamo-sink.attr_persistence = column
-# select the data_model: dm-by-entity 	dm-by-entity or dm-by-service-path
-# cygnus-ngsi.sinks.dynamo-sink.data_model = dm-by-entity
+# cygnus-ngsi.sinks.dynamodb-sink.attr_persistence = row
+# select the data_model: dm-by-entity or dm-by-service-path
+# cygnus-ngsi.sinks.dynamodb-sink.data_model = dm-by-entity
 # number of notifications to be included within a processing batch
-# cygnus-ngsi.sinks.dynamo-sink.batch_size = 100
+# cygnus-ngsi.sinks.dynamodb-sink.batch_size = 100
 # timeout for batch accumulation
-# cygnus-ngsi.sinks.dynamo-sink.batch_timeout = 30
+# cygnus-ngsi.sinks.dynamodb-sink.batch_timeout = 30
 # number of retries upon persistence error
-# cygnus-ngsi.sinks.dynamo-sink.batch_ttl = 10
+# cygnus-ngsi.sinks.dynamodb-sink.batch_ttl = 10
 
 # ============================================
 # NGSICartoDBSink configuration
@@ -441,16 +441,16 @@ cygnus-ngsi.channels.kafka-channel.type = memory
 # capacity of the channel
 cygnus-ngsi.channels.kafka-channel.capacity = 1000
 # amount of bytes that can be sent per transaction
-cygnus-ngsi.channels.mkafka-channel.transactionCapacity = 100
+cygnus-ngsi.channels.kafka-channel.transactionCapacity = 100
 
 # =============================================
-# dynamo-channel configuration
+# dynamodb-channel configuration
 # channel type (must not be changed)
-cygnus-ngsi.channels.dynamo-channel.type = memory
+cygnus-ngsi.channels.dynamodb-channel.type = memory
 # capacity of the channel
-cygnus-ngsi.channels.dynamo-channel.capacity = 1000
+cygnus-ngsi.channels.dynamodb-channel.capacity = 1000
 # amount of bytes that can be sent per transaction
-cygnus-ngsi.channels.dynamo-channel.transactionCapacity = 100
+cygnus-ngsi.channels.dynamodb-channel.transactionCapacity = 100
 
 # ============================================
 # cartodb-channel configuration
