--- a/cygnus-ngsi/conf/grouping_rules.conf.template
+++ b/cygnus-ngsi/conf/grouping_rules.conf.template
@@ -44,11 +44,11 @@
 # - regex: Java-like regular expression to be applied on the concatenated fields. Special characters like '\' must be
 #   escaped ('\' is escaped as "\\").
 # - destination: Name of the HDFS file or CKAN resource where the data will be effectively persisted. In the case of
-#   MySQL, Mongo and FIWARE Comet, this sufixes the table/collection name.
+#   MySQL, Mongo and STH Comet, this sufixes the table/collection name.
 #   Please, have a look to doc/design/naming_conventions.md for more details.
 # - fiware_service_path: New fiware-servicePath replacing the notified one. The sinks will translate this into the name
 #   of the HDFS folder or CKAN package where the above destination entity will be placed. In the case of MySQL, Mongo
-#   and FIWARE Comet, this prefixes the table/collection name. Please, have a look to doc/design/naming_conventions.md for more
+#   and STH Comet, this prefixes the table/collection name. Please, have a look to doc/design/naming_conventions.md for more
 #   details. It must start with `/` or the whole rule will be discarded.
 #
 # More detailed information regarding this feature can be found at:
