--- a/cygnus-ngsi/conf/agent_ngsi.conf.template
+++ b/cygnus-ngsi/conf/agent_ngsi.conf.template
@@ -215,7 +215,7 @@ cygnusagent.sinks.postgresql-sink.type = com.telefonica.iot.cygnus.sinks.NGSIPos
 # number of retries upon persistence error
 # cygnusagent.sinks.postgresql-sink.batch_ttl = 10
 # true enables cache, false disables cache
-cygnusagent.sinks.postgresql-sink.backend.enable_cache = false
+#cygnusagent.sinks.postgresql-sink.backend.enable_cache = false
 
 # ============================================
 # NGSIMongoSink configuration
