[997][cygnus] Update docker documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,7 @@ pages:
           - 'Introduction': 'cygnus-common/installation_and_administration_guide/introduction.md'
           - 'Hardware requirements': 'cygnus-common/installation_and_administration_guide/hw_requirements.md'
           - 'Installation from sources': 'cygnus-common/installation_and_administration_guide/install_from_sources.md'
+          - 'Installation via docker': 'cygnus-common/installation_and_administration_guide/install_with_docker.md'
           - 'Cygnus agent configuration': 'cygnus-common/installation_and_administration_guide/cygnus_agent_conf.md'
           - 'Flume environment configuration': 'cygnus-common/installation_and_administration_guide/flume_env_conf.md'
           - 'log4j configuration': 'cygnus-common/installation_and_administration_guide/log4j_conf.md'
