--- a/cygnus-ngsi/conf/agent_ngsi.conf.template
+++ b/cygnus-ngsi/conf/agent_ngsi.conf.template
@@ -66,6 +66,8 @@ cygnus-ngsi.sinks.hdfs-sink.type = com.telefonica.iot.cygnus.sinks.NGSIHDFSSink
 #cygnus-ngsi.sinks.hdfs-sink.enable_encoding = false
 # true if the grouping feature is enabled for this sink, false otherwise
 #cygnus-ngsi.sinks.hdfs-sink.enable_grouping = false
+# true if name mappings are enabled for this sink, false otherwise
+#cygnus-ngsi.sinks.hdfs-sink.enable_name_mappings = false
 # true if lower case is wanted to forced in all the element names, false otherwise
 #cygnus-ngsi.sinks.hdfs-sink.enable_lowercase = false
 # rest if the interaction with HDFS will be WebHDFS/HttpFS-based, binary if based on the Hadoop API
@@ -126,6 +128,8 @@ cygnus-ngsi.sinks.ckan-sink.channel = ckan-channel
 cygnus-ngsi.sinks.ckan-sink.type = com.telefonica.iot.cygnus.sinks.NGSICKANSink
 # true if the grouping feature is enabled for this sink, false otherwise
 #cygnus-ngsi.sinks.ckan-sink.enable_grouping = false
+# true if name mappings are enabled for this sink, false otherwise
+#cygnus-ngsi.sinks.ckan-sink.enable_name_mappings = false
 # true applies the new encoding, false applies the old encoding.
 #cygnus-ngsi.sinks.ckan-sink.enable_encoding = false
 # the CKAN API key to use
@@ -159,10 +163,12 @@ cygnus-ngsi.sinks.postgresql-sink.channel = postgresql-channel
 cygnus-ngsi.sinks.postgresql-sink.type = com.telefonica.iot.cygnus.sinks.NGSIPostgreSQLSink
 # true applies the new encoding, false applies the old encoding.
 #cygnus-ngsi.sinks.postgresql-sink.enable_encoding = false
+# true if name mappings are enabled for this sink, false otherwise
+#cygnus-ngsi.sinks.postgresql-sink.enable_name_mappings = false
 # true if the grouping feature is enabled for this sink, false otherwise
 #cygnus-ngsi.sinks.postgresql-sink.enable_grouping = false
 # true if lower case is wanted to forced in all the element names, false otherwise
-#cygnus-ngsi.sinks.hdfs-sink.enable_lowercase = false
+#cygnus-ngsi.sinks.postgresql-sink.enable_lowercase = false
 # the FQDN/IP address where the PostgreSQL server runs
 #cygnus-ngsi.sinks.postgresql-sink.postgresql_host = x.y.z.w
 # the port where the PostgreSQL server listens for incomming connections
@@ -192,10 +198,12 @@ cygnus-ngsi.sinks.mysql-sink.channel = mysql-channel
 cygnus-ngsi.sinks.mysql-sink.type = com.telefonica.iot.cygnus.sinks.NGSIMySQLSink
 # true applies the new encoding, false applies the old encoding
 #cygnus-ngsi.sinks.mysql-sink.enable_encoding = false
+# true if name mappings are enabled for this sink, false otherwise
+#cygnus-ngsi.sinks.mysql-sink.enable_name_mappings = false
 # true if the grouping feature is enabled for this sink, false otherwise
 #cygnus-ngsi.sinks.mysql-sink.enable_grouping = false
 # true if lower case is wanted to forced in all the element names, false otherwise
-#cygnus-ngsi.sinks.hdfs-sink.enable_lowercase = false
+#cygnus-ngsi.sinks.mysql-sink.enable_lowercase = false
 # the FQDN/IP address where the MySQL server runs
 #cygnus-ngsi.sinks.mysql-sink.mysql_host = x.y.z.w
 # the port where the MySQL server listens for incomming connections
@@ -223,6 +231,8 @@ cygnus-ngsi.sinks.mysql-sink.type = com.telefonica.iot.cygnus.sinks.NGSIMySQLSin
 cygnus-ngsi.sinks.mongo-sink.type = com.telefonica.iot.cygnus.sinks.NGSIMongoSink
 # channel name from where to read notification events
 cygnus-ngsi.sinks.mongo-sink.channel = mongo-channel
+# true if name mappings are enabled for this sink, false otherwise
+#cygnus-ngsi.sinks.mongo-sink.enable_name_mappings = false
 # true applies the new encoding, false applies the old encoding
 #cygnus-ngsi.sinks.mongo-sink.enable_encoding = false
 # true if the grouping feature is enabled for this sink, false otherwise
@@ -266,12 +276,14 @@ cygnus-ngsi.sinks.mongo-sink.channel = mongo-channel
 cygnus-ngsi.sinks.sth-sink.type = com.telefonica.iot.cygnus.sinks.NGSISTHSink
 # channel name from where to read notification events
 cygnus-ngsi.sinks.sth-sink.channel = sth-channel
+# true if name mappings are enabled for this sink, false otherwise
+#cygnus-ngsi.sinks.sth-sink.enable_name_mappings = false
 # true applies the new encoding, false applies the old encoding
-#cygnus-ngsi.sinks.hdfs-sink.enable_encoding = false
+#cygnus-ngsi.sinks.sth-sink.enable_encoding = false
 # true if the grouping feature is enabled for this sink, false otherwise
 #cygnus-ngsi.sinks.sth-sink.enable_grouping = false
 # true if lower case is wanted to forced in all the element names, false otherwise
-#cygnus-ngsi.sinks.hdfs-sink.enable_lowercase = false
+#cygnus-ngsi.sinks.sth-sink.enable_lowercase = false
 # FQDN/IP:port where the MongoDB server runs (standalone case) or comma-separated list of FQDN/IP:port pairs where the MongoDB replica set members run
 #cygnus-ngsi.sinks.sth-sink.mongo_hosts = x1.y1.z1.w1:port1,x2.y2.z2.w2:port2,...
 # a valid user in the MongoDB server (or empty if authentication is not enabled in MongoDB)
@@ -305,6 +317,8 @@ cygnus-ngsi.sinks.kafka-sink.type = com.telefonica.iot.cygnus.sinks.NGSIKafkaSin
 cygnus-ngsi.sinks.kafka-sink.channel = kafka-channel
 # true if the grouping feature is enabled for this sink, false otherwise
 #cygnus-ngsi.sinks.kafka-sink.enable_grouping = false
+# true if name mappings are enabled for this sink, false otherwise
+#cygnus-ngsi.sinks.kafka-sink.enable_name_mappings = false
 # true if lower case is wanted to forced in all the element names, false otherwise
 #cygnus-ngsi.sinks.kafka-sink.enable_lowercase = false
 # select the data_model: dm-by-service, dm-by-service-path, dm-by-entity or dm-by-attribute
@@ -338,8 +352,10 @@ cygnus-ngsi.sinks.dynamodb-sink.secret_access_key = xxxxxxxxx
 #cygnus-ngsi.sinks.dynamodb-sink.region = eu-central-1
 # true if the grouping feature is enabled for this sink, false otherwise
 #cygnus-ngsi.sinks.dynamodb-sink.enable_grouping = false
+# true if name mappings are enabled for this sink, false otherwise
+#cygnus-ngsi.sinks.dynamodb-sink.enable_name_mappings = false
 # true if lower case is wanted to forced in all the element names, false otherwise
-#cygnus-ngsi.sinks.hdfs-sink.enable_lowercase = false
+#cygnus-ngsi.sinks.dynamodb-sink.enable_lowercase = false
 # how the attributes are stored, either per row either per column (row, column)
 #cygnus-ngsi.sinks.dynamodb-sink.attr_persistence = row
 # select the data_model: dm-by-entity or dm-by-service-path
@@ -359,6 +375,8 @@ cygnus-ngsi.sinks.cartodb-sink.type = com.telefonica.iot.cygnus.sinks.NGSICartoD
 cygnus-ngsi.sinks.cartodb-sink.channel = cartodb-channel
 # true if the grouping feature is enabled for this sink, false otherwise
 #cygnus-ngsi.sinks.cartodb-sink.enable_grouping = false
+# true if name mappings are enabled for this sink, false otherwise
+#cygnus-ngsi.sinks.cartodb-sink.enable_name_mappings = false
 # true if lower case is wanted to forced in all the element names, false otherwise
 #cygnus-ngsi.sinks.cartodb-sink.enable_lowercase = false
 # select the data_model: dm-by-service-path or dm-by-entity
