--- a/docker/cygnus-ngsi/agent.conf
+++ b/docker/cygnus-ngsi/agent.conf
@@ -17,8 +17,8 @@
 #
 
 cygnus-ngsi.sources = http-source
-cygnus-ngsi.sinks = mysql-sink mongo-sink sth-sink
-cygnus-ngsi.channels = mysql-channel mongo-channel sth-channel
+cygnus-ngsi.sinks = mysql-sink mongo-sink sth-sink ckan-sink
+cygnus-ngsi.channels = mysql-channel mongo-channel sth-channel ckan-channel
 
 cygnus-ngsi.sources.http-source.type = org.apache.flume.source.http.HTTPSource
 cygnus-ngsi.sources.http-source.channels = mysql-channel mongo-channel sth-channel
@@ -36,6 +36,7 @@ cygnus-ngsi.sinks.mysql-sink.type = com.telefonica.iot.cygnus.sinks.NGSIMySQLSin
 cygnus-ngsi.sinks.mysql-sink.channel = mysql-channel
 #cygnus-ngsi.sinks.mysql-sink.enable_encoding = false
 #cygnus-ngsi.sinks.mysql-sink.enable_grouping = false
+#cygnus-ngsi.sinks.mysql-sink.enable_name_mappings = false
 #cygnus-ngsi.sinks.mysql-sink.enable_lowercase = false
 #cygnus-ngsi.sinks.mysql-sink.data_model = dm-by-entity
 #cygnus-ngsi.sinks.mysql-sink.mysql_host = iot-mysql
@@ -51,6 +52,7 @@ cygnus-ngsi.sinks.mongo-sink.type = com.telefonica.iot.cygnus.sinks.NGSIMongoSin
 cygnus-ngsi.sinks.mongo-sink.channel = mongo-channel
 #cygnus-ngsi.sinks.mongo-sink.enable_encoding = false
 #cygnus-ngsi.sinks.mongo-sink.enable_grouping = false
+#cygnus-ngsi.sinks.mongo-sink.enable_name_mappings = false
 #cygnus-ngsi.sinks.mongo-sink.enable_lowercase = false
 #cygnus-ngsi.sinks.mongo-sink.data_model = dm-by-entity
 #cygnus-ngsi.sinks.mongo-sink.attr_persistence = row
@@ -71,6 +73,7 @@ cygnus-ngsi.sinks.sth-sink.type = com.telefonica.iot.cygnus.sinks.NGSISTHSink
 cygnus-ngsi.sinks.sth-sink.channel = sth-channel
 #cygnus-ngsi.sinks.sth-sink.enable_encoding = false
 #cygnus-ngsi.sinks.sth-sink.enable_grouping = false
+#cygnus-ngsi.sinks.sth-sink.enable_name_mappings = false
 #cygnus-ngsi.sinks.sth-sink.enable_lowercase = false
 #cygnus-ngsi.sinks.sth-sink.data_model = dm-by-entity
 #cygnus-ngsi.sinks.sth-sink.mongo_hosts = iot-mongo:27017
@@ -85,6 +88,24 @@ cygnus-ngsi.sinks.sth-sink.channel = sth-channel
 #cygnus-ngsi.sinks.sth-sink.data_expiration = 0
 #cygnus-ngsi.sinks.sth-sink.ignore_white_spaces = true
 
+cygnus-ngsi.sinks.ckan-sink.type = com.telefonica.iot.cygnus.sinks.NGSICKANSink
+cygnus-ngsi.sinks.ckan-sink.channel = ckan-channel
+#cygnus-ngsi.sinks.ckan-sink.enable_encoding = false
+#cygnus-ngsi.sinks.ckan-sink.enable_grouping = false
+#cygnus-ngis.sinks.ckan-sink.enable_name_mappings = false
+#cygnus-ngsi.sinks.ckan-sink.data_model = dm-by-entity
+#cygnus-ngsi.sinks.ckan-sink.attr_persistence = row
+#cygnus-ngsi.sinks.ckan-sink.ckan_host = localhost
+#cygnus-ngsi.sinks.ckan-sink.ckan_port = 80
+#cygnus-ngsi.sinks.ckan-sink.ssl = false
+cygnus-ngsi.sinks.ckan-sink.api_key =
+#cygnus-ngsi.sinks.ckan-sink.orion_url = http://localhost:1026
+#cygnus-ngsi.sinks.ckan-sink.batch_size = 1
+#cygnus-ngsi.sinks.ckan-sink.batch_timeout = 30
+#cygnus-ngsi.sinks.ckan-sink.batch_ttl = 10
+#cygnus-ngsi.sinks.ckan-sink.backend.max_conns = 500
+#cygnus-ngsi.sinks.ckan-sink.backend.max_conns_per_route = 100
+
 cygnus-ngsi.channels.mysql-channel.type = com.telefonica.iot.cygnus.channels.CygnusMemoryChannel
 cygnus-ngsi.channels.mysql-channel.capacity = 1000
 cygnus-ngsi.channels.mysql-channel.transactionCapacity = 100
@@ -96,3 +117,7 @@ cygnus-ngsi.channels.mongo-channel.transactionCapacity = 100
 cygnus-ngsi.channels.sth-channel.type = com.telefonica.iot.cygnus.channels.CygnusMemoryChannel
 cygnus-ngsi.channels.sth-channel.capacity = 1000
 cygnus-ngsi.channels.sth-channel.transactionCapacity = 100
+
+cygnus-ngsi.channels.ckan-channel.type = com.telefonica.iot.cygnus.channels.CygnusMemoryChannel
+cygnus-ngsi.channels.ckan-channel.capacity = 1000
+cygnus-ngsi.channels.ckan-channel.transactionCapacity = 100
