--- a/docker/cygnus-ngsi/agent.conf
+++ b/docker/cygnus-ngsi/agent.conf
@@ -95,7 +95,7 @@ cygnus-ngsi.sinks.ckan-sink.channel = ckan-channel
 #cygnus-ngis.sinks.ckan-sink.enable_name_mappings = false
 #cygnus-ngsi.sinks.ckan-sink.data_model = dm-by-entity
 #cygnus-ngsi.sinks.ckan-sink.attr_persistence = row
-#cygnus-ngsi.sinks.ckan-sink.ckan_host = localhost
+#cygnus-ngsi.sinks.ckan-sink.ckan_host = iot-ckan
 #cygnus-ngsi.sinks.ckan-sink.ckan_port = 80
 #cygnus-ngsi.sinks.ckan-sink.ssl = false
 cygnus-ngsi.sinks.ckan-sink.api_key =
