[1206][cygnus][mkdocs.yml] Fix minor issue

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,7 +53,7 @@ pages:
           - 'Running as a service': 'cygnus-ngsi/installation_and_administration_guide/running_as_service.md'
           - 'Testing': 'cygnus-ngsi/installation_and_administration_guide/testing.md'
           - 'Name mappings': 'cygnus-ngsi/installation_and_administration_guide/name_mappings.md'
-          - 'Grouping Rules configuration': 'cygnus-ngsi/installation_and_administration_guide/grouping_rules.md'
+          - 'Grouping Rules': 'cygnus-ngsi/installation_and_administration_guide/grouping_rules.md'
           - 'Multitenancy': 'cygnus-ngsi/installation_and_administration_guide/multitenancy.md'
           - 'Performance tips': 'cygnus-ngsi/installation_and_administration_guide/performance_tips.md'
           - 'Sanity checks': 'cygnus-ngsi/installation_and_administration_guide/sanity_checks.md'
