--- a/cygnus-common/pom.xml
+++ b/cygnus-common/pom.xml
@@ -92,12 +92,12 @@
         <dependency>
             <groupId>org.apache.hive</groupId>
             <artifactId>hive-exec</artifactId>
-            <version>0.13.0</version>
+            <version>0.13.1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.hive</groupId>
             <artifactId>hive-jdbc</artifactId>
-            <version>0.13.0</version>
+            <version>0.13.1</version>
         </dependency>
         <!-- Required by MongoBackendImpl -->
         <dependency>
@@ -143,15 +143,18 @@
                 <!-- being able to find itself the right version. Many systems don't need this declaration -->
                 <!-- but it doesn't use to hurt anyway                                                     -->
                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>2.3.2</version>
+                    <version>3.5.1</version>
                     <configuration>
-                        <source>1.6</source>
-                        <target>1.6</target>
+                        <source>1.7</source>
+                        <target>1.7</target>
                         <compilerArgument></compilerArgument>
+                        <fork>true</fork>
                     </configuration>
                 </plugin>
                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-assembly-plugin</artifactId>
                     <version>2.6</version>
                     <configuration>
@@ -164,6 +167,7 @@
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>exec-maven-plugin</artifactId>
+                    <version>1.5.0</version>
                     <executions>
                         <execution>
                             <phase>compile</phase>
@@ -184,7 +188,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-site-plugin</artifactId>
-                    <version>3.3</version>
+                    <version>3.5.1</version>
                     <configuration>
                         <reportPlugins>
                             <plugin>
