--- a/docker/cygnus-twitter/Dockerfile
+++ b/docker/cygnus-twitter/Dockerfile
@@ -56,7 +56,7 @@ RUN yum -y install tar nc which git java-${JAVA_VERSION}-openjdk-devel && \
     curl --remote-name --location --insecure --silent --show-error "${MVN_URL}" && \
     tar xzvf ${MVN_TGZ} && \
     mv apache-maven-${MVN_VER} ${MVN_HOME} && \
-    export MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=128m" && \
+    export MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=128m -Dfile.encoding=UTF-8 -Dproject.build.sourceEncoding=UTF-8" && \
     curl --remote-name --location --insecure --silent --show-error "${FLUME_URL}" && \
     tar zxf ${FLUME_TGZ} && \
     mv apache-flume-${FLUME_VER}-bin ${FLUME_HOME} && \
