--- a/docker/cygnus-ngsi/agent.conf
+++ b/docker/cygnus-ngsi/agent.conf
@@ -4,16 +4,16 @@
 # This file is part of fiware-cygnus (FI-WARE project).
 #
 # fiware-cygnus is free software: you can redistribute it and/or modify it under the terms of the GNU Affero
-# General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your
-# option) any later version.
-# fiware-cygnus is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the
-# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License
-# for more details.
+# General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your
+# option) any later version.
+# fiware-cygnus is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the
+# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License
+# for more details.
 #
 # You should have received a copy of the GNU Affero General Public License along with fiware-cygnus. If not, see
-# http://www.gnu.org/licenses/.
+# http://www.gnu.org/licenses/.
 #
-# For those usages not covered by the GNU Affero General Public License please contact with iot_support at tid dot es
+# For those usages not covered by the GNU Affero General Public License please contact with iot_support at tid dot es
 #
 
 cygnus-ngsi.sources = http-source
@@ -21,7 +21,7 @@ cygnus-ngsi.sinks = mysql-sink mongo-sink sth-sink ckan-sink
 cygnus-ngsi.channels = mysql-channel mongo-channel sth-channel ckan-channel
 
 cygnus-ngsi.sources.http-source.type = org.apache.flume.source.http.HTTPSource
-cygnus-ngsi.sources.http-source.channels = mysql-channel mongo-channel sth-channel
+cygnus-ngsi.sources.http-source.channels = mysql-channel mongo-channel sth-channel ckan-channel
 cygnus-ngsi.sources.http-source.port = 5050
 cygnus-ngsi.sources.http-source.handler = com.telefonica.iot.cygnus.handlers.NGSIRestHandler
 cygnus-ngsi.sources.http-source.handler.notification_target = /notify
