[1193][cygnus][Dockerfile] Add ENV vars

--- a/docker/cygnus-ngsi/Dockerfile
+++ b/docker/cygnus-ngsi/Dockerfile
@@ -35,6 +35,10 @@ ENV CYGNUS_MYSQL_USER "mysql"
 ENV CYGNUS_MYSQL_PASS "mysql"
 ENV CYGNUS_MONGO_USER "mongo"
 ENV CYGNUS_MONGO_PASS "mongo"
+ENV CYGNUS_CKAN_HOST "iot-ckan"
+ENV CYGNUS_CKAN_PORT "80"
+ENV CYGNUS_CKAN_API_KEY ""
+ENV CYGNUS_CKAN_SSL "false"
 
 # NOTE: Configure correctly GIT_URL_CYGNUS and GIT_REV_CYGNUS for each git branch/fork used
 ENV GIT_URL_CYGNUS "https://github.com/pcoello25/fiware-cygnus"
