[1193][cygnus][Dockerfile] Set correct github parameters

--- a/docker/cygnus-ngsi/Dockerfile
+++ b/docker/cygnus-ngsi/Dockerfile
@@ -41,9 +41,9 @@ ENV CYGNUS_CKAN_API_KEY ""
 ENV CYGNUS_CKAN_SSL "false"
 
 # NOTE: Configure correctly GIT_URL_CYGNUS and GIT_REV_CYGNUS for each git branch/fork used
-ENV GIT_URL_CYGNUS "https://github.com/pcoello25/fiware-cygnus"
+ENV GIT_URL_CYGNUS "https://github.com/telefonicaid/fiware-cygnus"
 # ENV GIT_URL_CYGNUS "https://github.com/myuser/fiware-cygnus.git"
-ENV GIT_REV_CYGNUS "hardening/1193_add_ngsickansink_configuration_in_agent_file"
+ENV GIT_REV_CYGNUS "master"
 # ENV GIT_REV_CYGNUS "mybranch"
 
 ENV MVN_VER "3.3.9"
