--- a/docker/cygnus-ngsi/agent.conf
+++ b/docker/cygnus-ngsi/agent.conf
@@ -17,11 +17,11 @@
 #
 
 cygnus-ngsi.sources = http-source
-cygnus-ngsi.sinks = mysql-sink mongo-sink sth-sink ckan-sink
-cygnus-ngsi.channels = mysql-channel mongo-channel sth-channel ckan-channel
+cygnus-ngsi.sinks = mysql-sink mongo-sink sth-sink ckan-sink hdfs-sink
+cygnus-ngsi.channels = mysql-channel mongo-channel sth-channel ckan-channel hdfs-channel
 
 cygnus-ngsi.sources.http-source.type = org.apache.flume.source.http.HTTPSource
-cygnus-ngsi.sources.http-source.channels = mysql-channel mongo-channel sth-channel ckan-channel
+cygnus-ngsi.sources.http-source.channels = mysql-channel mongo-channel sth-channel ckan-channel hdfs-channel
 cygnus-ngsi.sources.http-source.port = 5050
 cygnus-ngsi.sources.http-source.handler = com.telefonica.iot.cygnus.handlers.NGSIRestHandler
 cygnus-ngsi.sources.http-source.handler.notification_target = /notify
@@ -106,6 +106,30 @@ cygnus-ngsi.sinks.ckan-sink.api_key =
 #cygnus-ngsi.sinks.ckan-sink.backend.max_conns = 500
 #cygnus-ngsi.sinks.ckan-sink.backend.max_conns_per_route = 100
 
+cygnus-ngsi.sinks.hdfs-sink.type = com.telefonica.iot.cygnus.sinks.NGSIHDFSSink
+cygnus-ngsi.sinks.hdfs-sink.channel = hdfs-channel
+#cygnus-ngsi.sinks.hdfs-sink.enable_encoding = false
+#cygnus-ngsi.sinks.hdfs-sink.enable_grouping = false
+#cygnus-ngsi.sinks.hdfs-sink.enable_lowercase = false
+#cygnus-ngsi.sinks.hdfs-sink.enable_name_mappings = false
+#cygnus-ngsi.sinks.hdfs-sink.data_model = dm-by-entity
+#cygnus-ngsi.sinks.hdfs-sink.file_format = json-column
+#cygnus-ngsi.sinks.hdfs-sink.backend.impl = rest
+#cygnus-ngsi.sinks.hdfs-sink.backend.max_conns = 500
+#cygnus-ngsi.sinks.hdfs-sink.backend.max_conns_per_route = 100
+#cygnus-ngsi.sinks.hdfs-sink.hdfs_host = 192.168.80.34
+#cygnus-ngsi.sinks.hdfs-sink.hdfs_port = 14000
+cygnus-ngsi.sinks.hdfs-sink.hdfs_username = 
+cygnus-ngsi.sinks.hdfs-sink.hdfs_password = 
+#cygnus-ngsi.sinks.hdfs-sink.oauth2_token = 
+#cygnus-ngsi.sinks.hdfs-sink.service_as_namespace = false
+#cygnus-ngsi.sinks.hdfs-sink.batch_size = 100
+#cygnus-ngsi.sinks.hdfs-sink.batch_timeout = 30
+#cygnus-ngsi.sinks.hdfs-sink.batch_ttl = 10
+#cygnus-ngsi.sinks.hdfs-sink.batch_retry_intervals = 5000
+#cygnus-ngsi.sinks.hdfs-sink.hive = false
+#cygnus-ngsi.sinks.hdfs-sink.krb5_auth = false
+
 cygnus-ngsi.channels.mysql-channel.type = com.telefonica.iot.cygnus.channels.CygnusMemoryChannel
 cygnus-ngsi.channels.mysql-channel.capacity = 1000
 cygnus-ngsi.channels.mysql-channel.transactionCapacity = 100
@@ -121,3 +145,7 @@ cygnus-ngsi.channels.sth-channel.transactionCapacity = 100
 cygnus-ngsi.channels.ckan-channel.type = com.telefonica.iot.cygnus.channels.CygnusMemoryChannel
 cygnus-ngsi.channels.ckan-channel.capacity = 1000
 cygnus-ngsi.channels.ckan-channel.transactionCapacity = 100
+
+cygnus-ngsi.channels.hdfs-channel.type = com.telefonica.iot.cygnus.channels.CygnusMemoryChannel
+cygnus-ngsi.channels.hdfs-channel.capacity = 1000
+cygnus-ngsi.channels.hdfs-channel.transactionCapacity = 100
