[1172][cygnus] Fix issues raised during code review

--- a/docker/cygnus-ngsi/agent.conf
+++ b/docker/cygnus-ngsi/agent.conf
@@ -117,7 +117,7 @@ cygnus-ngsi.sinks.hdfs-sink.channel = hdfs-channel
 #cygnus-ngsi.sinks.hdfs-sink.backend.impl = rest
 #cygnus-ngsi.sinks.hdfs-sink.backend.max_conns = 500
 #cygnus-ngsi.sinks.hdfs-sink.backend.max_conns_per_route = 100
-#cygnus-ngsi.sinks.hdfs-sink.hdfs_host = 192.168.80.34
+#cygnus-ngsi.sinks.hdfs-sink.hdfs_host = iot-hdfs
 #cygnus-ngsi.sinks.hdfs-sink.hdfs_port = 14000
 cygnus-ngsi.sinks.hdfs-sink.hdfs_username = 
 cygnus-ngsi.sinks.hdfs-sink.hdfs_password = 
