[1239][cygnus] Fix NGSIMongoSink and NGSISTHSink configuration

--- a/docker/cygnus-ngsi/Dockerfile
+++ b/docker/cygnus-ngsi/Dockerfile
@@ -35,6 +35,7 @@ ENV CYGNUS_MYSQL_HOST "iot-mysql"
 ENV CYGNUS_MYSQL_PORT "3306"
 ENV CYGNUS_MYSQL_USER "mysql"
 ENV CYGNUS_MYSQL_PASS "mysql"
+ENV CYGNUS_MONGO_HOSTS "iot-mongo:27017"
 ENV CYGNUS_MONGO_USER "mongo"
 ENV CYGNUS_MONGO_PASS "mongo"
 ENV CYGNUS_CKAN_HOST "iot-ckan"
@@ -47,9 +48,9 @@ ENV CYGNUS_HDFS_USER "hdfs"
 ENV CYGNUS_HDFS_TOKEN ""
 
 # NOTE: Configure correctly GIT_URL_CYGNUS and GIT_REV_CYGNUS for each git branch/fork used
-ENV GIT_URL_CYGNUS "https://github.com/telefonicaid/fiware-cygnus.git"
+ENV GIT_URL_CYGNUS "https://github.com/pcoello25/fiware-cygnus.git"
 # ENV GIT_URL_CYGNUS "https://github.com/myuser/fiware-cygnus.git"
-ENV GIT_REV_CYGNUS "master"
+ENV GIT_REV_CYGNUS "hardening/1239_fix_mongo_and_sth_sinks_configuration_in_docker"
 # ENV GIT_REV_CYGNUS "mybranch"
 
 ENV MVN_VER "3.3.9"
