[1239][cygnus][agent.conf] Fix parameters

--- a/docker/cygnus-ngsi/agent.conf
+++ b/docker/cygnus-ngsi/agent.conf
@@ -39,10 +39,10 @@ cygnus-ngsi.sinks.mysql-sink.channel = mysql-channel
 #cygnus-ngsi.sinks.mysql-sink.enable_name_mappings = false
 #cygnus-ngsi.sinks.mysql-sink.enable_lowercase = false
 #cygnus-ngsi.sinks.mysql-sink.data_model = dm-by-entity
-#cygnus-ngsi.sinks.mysql-sink.mysql_host = iot-mysql
-#cygnus-ngsi.sinks.mysql-sink.mysql_port = 3306
-#cygnus-ngsi.sinks.mysql-sink.mysql_username =
-#cygnus-ngsi.sinks.mysql-sink.mysql_password =
+cygnus-ngsi.sinks.mysql-sink.mysql_host = iot-mysql
+cygnus-ngsi.sinks.mysql-sink.mysql_port = 3306
+cygnus-ngsi.sinks.mysql-sink.mysql_username =
+cygnus-ngsi.sinks.mysql-sink.mysql_password =
 #cygnus-ngsi.sinks.mysql-sink.attr_persistence = row
 #cygnus-ngsi.sinks.mysql-sink.batch_size = 1
 #cygnus-ngsi.sinks.mysql-sink.batch_timeout = 30
@@ -56,9 +56,9 @@ cygnus-ngsi.sinks.mongo-sink.channel = mongo-channel
 #cygnus-ngsi.sinks.mongo-sink.enable_lowercase = false
 #cygnus-ngsi.sinks.mongo-sink.data_model = dm-by-entity
 #cygnus-ngsi.sinks.mongo-sink.attr_persistence = row
-#cygnus-ngsi.sinks.mongo-sink.mongo_hosts = iot-mongo:27017
-#cygnus-ngsi.sinks.mongo-sink.mongo_username =
-#cygnus-ngsi.sinks.mongo-sink.mongo_password =
+cygnus-ngsi.sinks.mongo-sink.mongo_hosts = iot-mongo:27017
+cygnus-ngsi.sinks.mongo-sink.mongo_username =
+cygnus-ngsi.sinks.mongo-sink.mongo_password =
 #cygnus-ngsi.sinks.mongo-sink.db_prefix = sth_
 #cygnus-ngsi.sinks.mongo-sink.collection_prefix = sth_
 #cygnus-ngsi.sinks.mongo-sink.batch_size = 1
@@ -76,9 +76,9 @@ cygnus-ngsi.sinks.sth-sink.channel = sth-channel
 #cygnus-ngsi.sinks.sth-sink.enable_name_mappings = false
 #cygnus-ngsi.sinks.sth-sink.enable_lowercase = false
 #cygnus-ngsi.sinks.sth-sink.data_model = dm-by-entity
-#cygnus-ngsi.sinks.sth-sink.mongo_hosts = iot-mongo:27017
-#cygnus-ngsi.sinks.sth-sink.mongo_username =
-#cygnus-ngsi.sinks.sth-sink.mongo_password =
+cygnus-ngsi.sinks.sth-sink.mongo_hosts = iot-mongo:27017
+cygnus-ngsi.sinks.sth-sink.mongo_username =
+cygnus-ngsi.sinks.sth-sink.mongo_password =
 #cygnus-ngsi.sinks.sth-sink.db_prefix = sth_
 #cygnus-ngsi.sinks.sth-sink.collection_prefix = sth_
 #cygnus-ngsi.sinks.sth-sink.resolutions = month,day,hour,minute,second
@@ -95,9 +95,9 @@ cygnus-ngsi.sinks.ckan-sink.channel = ckan-channel
 #cygnus-ngis.sinks.ckan-sink.enable_name_mappings = false
 #cygnus-ngsi.sinks.ckan-sink.data_model = dm-by-entity
 #cygnus-ngsi.sinks.ckan-sink.attr_persistence = row
-#cygnus-ngsi.sinks.ckan-sink.ckan_host = iot-ckan
-#cygnus-ngsi.sinks.ckan-sink.ckan_port = 80
-#cygnus-ngsi.sinks.ckan-sink.ssl = false
+cygnus-ngsi.sinks.ckan-sink.ckan_host = iot-ckan
+cygnus-ngsi.sinks.ckan-sink.ckan_port = 80
+cygnus-ngsi.sinks.ckan-sink.ssl = false
 cygnus-ngsi.sinks.ckan-sink.api_key =
 #cygnus-ngsi.sinks.ckan-sink.orion_url = http://localhost:1026
 #cygnus-ngsi.sinks.ckan-sink.batch_size = 1
@@ -117,11 +117,11 @@ cygnus-ngsi.sinks.hdfs-sink.channel = hdfs-channel
 #cygnus-ngsi.sinks.hdfs-sink.backend.impl = rest
 #cygnus-ngsi.sinks.hdfs-sink.backend.max_conns = 500
 #cygnus-ngsi.sinks.hdfs-sink.backend.max_conns_per_route = 100
-#cygnus-ngsi.sinks.hdfs-sink.hdfs_host = iot-hdfs
-#cygnus-ngsi.sinks.hdfs-sink.hdfs_port = 14000
+cygnus-ngsi.sinks.hdfs-sink.hdfs_host = iot-hdfs
+cygnus-ngsi.sinks.hdfs-sink.hdfs_port = 14000
 cygnus-ngsi.sinks.hdfs-sink.hdfs_username = 
-cygnus-ngsi.sinks.hdfs-sink.hdfs_password = 
-#cygnus-ngsi.sinks.hdfs-sink.oauth2_token = 
+#cygnus-ngsi.sinks.hdfs-sink.hdfs_password = 
+cygnus-ngsi.sinks.hdfs-sink.oauth2_token = 
 #cygnus-ngsi.sinks.hdfs-sink.service_as_namespace = false
 #cygnus-ngsi.sinks.hdfs-sink.batch_size = 100
 #cygnus-ngsi.sinks.hdfs-sink.batch_timeout = 30
