[1239][cygnus] Update with fixed errors

--- a/docker/cygnus-ngsi/agent.conf
+++ b/docker/cygnus-ngsi/agent.conf
@@ -56,7 +56,7 @@ cygnus-ngsi.sinks.mongo-sink.channel = mongo-channel
 #cygnus-ngsi.sinks.mongo-sink.enable_lowercase = false
 #cygnus-ngsi.sinks.mongo-sink.data_model = dm-by-entity
 #cygnus-ngsi.sinks.mongo-sink.attr_persistence = row
-cygnus-ngsi.sinks.mongo-sink.mongo_hosts = 
+cygnus-ngsi.sinks.mongo-sink.mongo_hosts = iot-mongo:27017
 cygnus-ngsi.sinks.mongo-sink.mongo_username =
 cygnus-ngsi.sinks.mongo-sink.mongo_password =
 #cygnus-ngsi.sinks.mongo-sink.db_prefix = sth_
@@ -76,7 +76,7 @@ cygnus-ngsi.sinks.sth-sink.channel = sth-channel
 #cygnus-ngsi.sinks.sth-sink.enable_name_mappings = false
 #cygnus-ngsi.sinks.sth-sink.enable_lowercase = false
 #cygnus-ngsi.sinks.sth-sink.data_model = dm-by-entity
-cygnus-ngsi.sinks.sth-sink.mongo_hosts = 
+cygnus-ngsi.sinks.sth-sink.mongo_hosts = iot-mongo:27017
 cygnus-ngsi.sinks.sth-sink.mongo_username =
 cygnus-ngsi.sinks.sth-sink.mongo_password =
 #cygnus-ngsi.sinks.sth-sink.db_prefix = sth_
