[1246][cygnus] Fix API entries in documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,7 +25,8 @@ pages:
           - 'Running as a process': 'cygnus-common/installation_and_administration_guide/running_as_process.md'
           - 'Testing': 'cygnus-common/installation_and_administration_guide/testing.md'
           - 'Logs and alarms': 'cygnus-common/installation_and_administration_guide/logs_and_alarms.md'
-          - 'Management interface': 'cygnus-common/installation_and_administration_guide/management_interface.md'
+          - 'Original API': 'cygnus-common/installation_and_administration_guide/management_interface.md'
+          - 'v1 API (beta)' : 'cygnus-common/installation_and_administration_guide/management_interface_v1.md'
           - 'Sanity checks': 'cygnus-common/installation_and_administration_guide/sanity_checks.md'
           - 'Diagnosis procedures': 'cygnus-common/installation_and_administration_guide/diagnosis_procedures.md'
           - 'Reporting issues and contact information': 'cygnus-common/installation_and_administration_guide/issues_and_contact.md'
