--- a/cygnus-ngsi/pom.xml
+++ b/cygnus-ngsi/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.telefonica.iot</groupId>
     <artifactId>cygnus-ngsi</artifactId>
-    <version>1.4.0_SNAPSHOT</version>
+    <version>1.5.0</version>
     <packaging>jar</packaging>
 
     <name>cygnus-ngsi</name>
@@ -56,7 +56,7 @@
         <dependency>
             <groupId>com.telefonica.iot</groupId>
             <artifactId>cygnus-common</artifactId>
-            <version>1.4.0_SNAPSHOT</version>
+            <version>1.5.0</version>
         </dependency>
     </dependencies>
 
